time bound error resolved

--- a/enc_dec_sim_search_simple.ipynb
+++ b/enc_dec_sim_search_simple.ipynb
@@ -186,8 +186,18 @@
     "                score=score_max\n",
     "            else:\n",
     "                raise NameError('unsuccessful, local minimum reached, perfect score not obtained')\n",
-    "                \n",
-    "TIME_BOUND=50              \n",
+    "                \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "2f0d037d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TIME_BOUND=10\n",
+    "\n",
     "@timeout(TIME_BOUND)\n",
     "def gradient_descent_main(ca1, ca2, train, test, enc_size):\n",
     "    f1, f2 = create_f_dict(ca1), create_f_dict(ca2)\n",
@@ -197,14 +207,14 @@
     "            print(\"enc0: \", enc[:enc_size], \"enc1: \", enc[enc_size:])\n",
     "            print(\"dec0: \", dec[0], \"dec1: \", dec[1])\n",
     "            return\n",
-    "        except:\n",
-    "            continue\n",
-    "    \n"
+    "        except NameError:\n",
+    "            pass\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9ea32dfb",
    "metadata": {},
    "outputs": [],
@@ -224,16 +234,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "c695657e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enc0:  [0 1 1] enc1:  [1 0 0]\n",
+      "dec0:  {(0, 1, 1), (0, 0, 1)} dec1:  {(1, 0, 0), (1, 1, 0), (0, 0, 0)}\n"
+     ]
+    }
+   ],
    "source": [
-    "ca1=14\n",
-    "ca2=43\n",
+    "ca1=43\n",
+    "ca2=14\n",
     "enc_size=3\n",
     "\n",
-    "gradient_descent_main(ca1, ca2, train, test, enc_size)"
+    "try:\n",
+    "    gradient_descent_main(ca1, ca2, train, test, enc_size)\n",
+    "except:\n",
+    "    print(f\"Could not find the relation {ca1} <= {ca2} with encoder size {enc_size} in {TIME_BOUND} seconds\")"
    ]
   }
  ],
